# ai-assistant

./: .env.example  Dockerfile  LICENSE  README.md  docker-compose.yml  pyproject.toml  requirements.txt  setup_python_env.sh
ai_service/: Dockerfile  main.py  models.py  requirements.txt  response_formats.py  settings.py
ai_service/api/: main.py  models.py  settings.py
ai_service/prompts/: chat_manuals.md  image_to_text.md
api/: db.py  helpers.py  main.py  models.py  settings.py
api/ui/css/: styles.css
api/ui/html/: index.html
api/ui/js/: script.js
pipeline/: db.py  helpers.py  main.py  settings.py
pipeline/data/embeddings/manuals/LAD-Front-Loading-Service-Manual-L11/: page_1.pkl  page_10.pkl  page_11.pkl  page_12.pkl  page_13.pkl  page_14.pkl  page_15.pkl  page_16.pkl  page_17.pkl  page_18.pkl  page_19.pkl  page_2.pkl  page_20.pkl  page_21.pkl  page_22.pkl  page_23.pkl  page_24.pkl  page_25.pkl  page_26.pkl  page_27.pkl  page_28.pkl  page_29.pkl  page_3.pkl  page_30.pkl  page_31.pkl  page_32.pkl  page_33.pkl  page_34.pkl  page_35.pkl  page_36.pkl  page_37.pkl  page_38.pkl  page_39.pkl  page_4.pkl  page_40.pkl  page_41.pkl  page_42.pkl  page_43.pkl  page_44.pkl  page_45.pkl  (+31 more)
pipeline/data/embeddings/manuals/technical-manual-w11663204-revb/: page_1.pkl  page_10.pkl  page_11.pkl  page_12.pkl  page_13.pkl  page_14.pkl  page_15.pkl  page_16.pkl  page_17.pkl  page_18.pkl  page_19.pkl  page_2.pkl  page_20.pkl  page_21.pkl  page_22.pkl  page_23.pkl  page_24.pkl  page_25.pkl  page_26.pkl  page_27.pkl  page_28.pkl  page_29.pkl  page_3.pkl  page_30.pkl  page_31.pkl  (+41 more)
(+136 files in other folders)
