[tool.poetry]
package-mode = false
name = "ai_assistant"
version = "0.1.0"
description = ""
authors = ["Matúš Staš <matusstas.ms@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
click = "8.2.1"
typer = "^0.9.0"

[tool.poetry.group.dev.dependencies]
black = "^23.9.1"
isort = "^5.12.0"
ipykernel = "^6.25.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
