[tool.poetry]
package-mode = false
name = "ai_assistant"
version = "0.1.0"
description = ""
authors = ["Matúš Staš <matusstas.ms@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
click = "8.2.1"
pydantic-settings = "^2.0.3"
typer = "^0.9.0"
fitz = "^0.0.1.dev2"
frontend = "^0.0.3"
pymupdf = "^1.26.7"
tqdm = "^4.67.1"
fastapi = "^0.128.0"
python-multipart = "^0.0.21"
openai = "^2.15.0"
qdrant-client = "^1.16.2"
tiktoken = "^0.12.0"

[tool.poetry.group.dev.dependencies]
black = "^23.9.1"
isort = "^5.12.0"
ipykernel = "^6.25.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
